fixes text flicker

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -61,7 +61,7 @@ h2 {
     width: 32%;
     float: left;
     min-height: 14rem;
-    background: white;
+    // background: white;
     cursor: pointer;
     /* Set the transition effects */
     -webkit-transition: -webkit-transform 0.4s;
